## Process this file with automake to produce Makefile.in
MAINTAINERCLEANFILES = Makefile.in
SUBDIRS=@ARCHDIR@
# atomicity.tgz contains some more atomicity.h files from architectures
# not currently supported by our runtime.
EXTRA_DIST=README atomicity.tgz
DIST_SUBDIRS = arm32 ix86 mips sparc32 sparc64
