## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.5 2005-11-28 06:26:27 salcianu Exp $
MAINTAINERCLEANFILES = Makefile.in
CLEANFILES = *~
SUBDIRS=@ARCHDIR@
# atomicity.tgz contains some more atomicity.h files from architectures
# not currently supported by our runtime.
EXTRA_DIST=README atomicity.tgz
DIST_SUBDIRS = arm32 ix86 mips ppc32 sparc32 sparc64
