## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.6 2006-12-28 17:05:19 cananian Exp $
MAINTAINERCLEANFILES = Makefile.in
SUBDIRS=@ARCHDIR@
# atomicity.tgz contains some more atomicity.h files from architectures
# not currently supported by our runtime.
EXTRA_DIST=README atomicity.tgz
DIST_SUBDIRS = arm32 ix86 mips ppc32 sparc32 sparc64
