## input for automake

SUBDIRS = beancontext

EXTRA_DIST = \
AppletInitializer.java \
BeanDescriptor.java \
BeanInfo.java \
Beans.java \
Customizer.java \
DesignMode.java \
EventSetDescriptor.java \
ExceptionListener.java \
FeatureDescriptor.java \
IndexedPropertyDescriptor.java \
IntrospectionException.java \
Introspector.java \
MethodDescriptor.java \
ParameterDescriptor.java \
PropertyChangeEvent.java \
PropertyChangeListener.java \
PropertyChangeListenerProxy.java \
PropertyChangeSupport.java \
PropertyDescriptor.java \
PropertyEditor.java \
PropertyEditorManager.java \
PropertyEditorSupport.java \
PropertyVetoException.java \
SimpleBeanInfo.java \
TODO \
VetoableChangeListener.java \
VetoableChangeListenerProxy.java \
VetoableChangeSupport.java \
Visibility.java \
package.html

