SUBDIRS=channels charset

EXTRA_DIST= \
Buffer.java \
BufferOverflowException.java \
BufferUnderflowException.java \
ByteBuffer.java \
ByteOrder.java \
CharBuffer.java \
DoubleBuffer.java \
FloatBuffer.java \
IntBuffer.java \
InvalidMarkException.java \
LongBuffer.java \
MappedByteBuffer.java \
ReadOnlyBufferException.java \
ShortBuffer.java \
package.html

