## Input file for automake to generate the Makefile.in used by configure

SUBDIRS = activation dgc registry server

EXTRA_DIST = AccessException.java \
AlreadyBoundException.java \
ConnectException.java \
ConnectIOException.java	\
MarshalException.java \
MarshalledObject.java \
Naming.java \
NoSuchObjectException.java \
NotBoundException.java \
RMISecurityException.java \
RMISecurityManager.java	\
Remote.java \
RemoteException.java \
ServerError.java \
ServerException.java \
ServerRuntimeException.java \
StubNotFoundException.java \
UnexpectedException.java \
UnknownHostException.java \
UnmarshalException.java \
package.html

